trying to fix background error on portfolio page on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: url(./images/nasa.jpg) no-repeat center center fixed;
+  background: url(./images/nasa.jpg) center center fixed;
   -webkit-background: cover;
   -moz-background: cover;
   -o-background: cover;
